--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,18 @@
 html, body, #root {
   height: 100%;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: rgba(226, 226, 226, 0.8);
+}
+
+.canvas-container {
+  height: 50vh;
+  width: 50vw;
+  background-color: rgba(255, 162, 210, 0.8);
+  z-index: 100;
+}
